# dioxus-element-plug

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  Cargo.toml  DEVELOPER_GUIDE.md  DIOXUS_INTEGRATION_EXAMPLES.md  DIOXUS_STYLING.md  GITHUB_SETUP.md  Makefile  OPTIMIZATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PUBLISHING.md  PUBLISHING_READY.md  PUBLISH_CHECKLIST.md  PUBLISH_RESULT.md  PUBLISH_STAGE.md  PUBLISH_SUCCESS.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  README.zh-CN.md  SCSS_STRUCTURE.md  SIMPLE_START.md  SKILL.md  USAGE_GUIDE.md  build.rs
.cargo/: config.toml
.github/workflows/: docs-site.yml  rust.yml
docs-site/: Cargo.toml  Dioxus.toml  serve.py
docs-site/src/: main.rs
docs-site/src/components/: api_table.rs  code_block.rs  code_example.rs  demo_block.rs  demo_container.rs  layout.rs  mod.rs  props_table.rs
docs-site/src/pages/: basic.rs  button_doc.rs  card_doc.rs  display.rs  feedback.rs  form.rs  getting_started.rs  home.rs  input_doc.rs  layout.rs  mod.rs  navigation.rs  select_doc.rs  table_doc.rs  theming.rs
element-icons/: Cargo.toml
element-icons/src/: lib.rs  props.rs  vdom.rs
element-icons/src/element/: arrow_down.rs  arrow_down_bold.rs  arrow_left.rs  arrow_left_bold.rs  arrow_right.rs  arrow_right_bold.rs  arrow_up.rs  arrow_up_bold.rs  bell.rs  bell_filled.rs  bottom.rs  bottom_left.rs  bottom_right.rs  box_icon.rs  calendar.rs  caret_bottom.rs  caret_left.rs  caret_right.rs  caret_top.rs  chat_dot_round.rs  chat_line_round.rs  check.rs  circle_check.rs  circle_check_filled.rs  circle_close.rs  circle_close_filled.rs  circle_plus.rs  circle_plus_filled.rs  clock.rs  close.rs  close_bold.rs  cloudy.rs  coin.rs  connection.rs  coordinate.rs  credit_card.rs  d_arrow_left.rs  d_arrow_right.rs  data_analysis.rs  data_board.rs  (+97 more)
examples/: README.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/component-showcase/: Cargo.toml  Dioxus.toml
examples/component-showcase/src/: main.rs
examples/modern-pure-rust-example/: Cargo.toml  Dioxus.toml  README.md  input.css
examples/modern-pure-rust-example/src/: main.rs
examples/theme-switcher/: Cargo.toml  Dioxus.toml  README.md
examples/theme-switcher/src/: main.rs
examples/with-scss-asset/: Cargo.toml  Dioxus.toml  README.md
examples/with-scss-asset/assets/: theme-chalk.scss
examples/with-scss-asset/src/: main.rs
scss/: index.scss
src/: lib.rs  scss.rs  style_system.rs  theme.rs
src/components/: affix.rs  alert.rs  anchor.rs  anchor_link.rs  autocomplete.rs  avatar.rs  avatar_group.rs  backtop.rs  badge.rs  breadcrumb.rs  breadcrumb_item.rs  button.rs  button_group.rs  calendar.rs  card.rs  carousel.rs  carousel_item.rs  cascader.rs  cascader_panel.rs  checkbox.rs  checkbox_button.rs  checkbox_group.rs  col.rs  collapse.rs  collapse_item.rs  color_picker.rs  common.rs  container.rs  date_picker.rs  descriptions.rs  descriptions_item.rs  dialog.rs  divider.rs  drawer.rs  dropdown.rs  dropdown_item.rs  dropdown_menu.rs  empty.rs  footer.rs  form.rs  (+57 more)
src/styles/: borders.rs  colors.rs  component_classes.rs  core.rs  css_generation.rs  css_snippets.rs  enhanced_css_system.rs  enhanced_output.rs  mod.rs  shadows.rs  simple_css_generation.rs  spacing.rs  theme.rs  typography.rs  utilities.rs  z_index.rs
