[package]
name = "dioxus-element-plug"
version = "0.1.3"
edition = "2021"
authors = ["Paul Johnson"]
description = "Element UI components for Dioxus applications with pure Rust styling system"
license = "MIT"
repository = "https://github.com/pauljohn21/dioxus-element-plug"
documentation = "https://docs.rs/dioxus-element-plug"
homepage = "https://github.com/pauljohn21/dioxus-element-plug"
keywords = ["dioxus", "ui", "components", "element-ui", "styling"]
categories = ["web-programming", "gui"]
readme = "README.md"

# Files to exclude from the published package
exclude = [
  "examples/*",
  "dist/*", 
  ".github/*",
  "*.txt",
  "Makefile",
  "DIOXUS_*.md",
  "GITHUB_*.md",
  "PUSH_*.md",
  "SCSS_*.md",
  "PROJECT_*.md",
  "OPTIMIZATION_*.md",
  "CHANGELOG.md",
]

[package.metadata.docs.rs]
# Enable only the minimal features needed for documentation generation
features = []
all-features = false
# Disable default features to avoid unnecessary dependencies in docs
no-default-features = true
# Target platform for documentation generation
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]
# Feature for documentation generation - minimal dependencies
docs = []  # Minimal feature set for documentation generation

[build-dependencies]

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
serde_json = "1.0"
# manganis removed - using pure Rust styling

[dev-dependencies]
dioxus = { version = "0.7", features = ["web"] }
console_error_panic_hook = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
