[package]
name = "dioxus-element-plug"
version = "0.2.2"
edition = "2021"
authors = ["Paul Johnson"]
description = "Element UI components for Dioxus applications with pure Rust styling system"
license = "MIT"
repository = "https://gitee.com/pauljoihn21/dioxus-element-plug"
documentation = "https://docs.rs/dioxus-element-plug"
homepage = "https://gitee.com/pauljoihn21/dioxus-element-plug"
keywords = ["dioxus", "ui", "components", "element-ui", "styling"]
categories = ["web-programming", "gui"]
readme = "README.md"

# Files to exclude from the published package
exclude = [
  "examples/*",
  "dist/*", 
  ".github/*",
  "*.txt",
  "Makefile",
  "DIOXUS_*.md",
  "GITHUB_*.md",
  "PUSH_*.md",
  "SCSS_*.md",
  "PROJECT_*.md",
  "OPTIMIZATION_*.md",
  "CHANGELOG.md",
]

[package.metadata.docs.rs]
# Only pass --cfg docsrs to rustdoc (our crate), NOT to rustc (all dependencies).
# Passing --cfg docsrs to rustc breaks dependencies like generic-array and slotmap
# which use #![cfg_attr(docsrs, feature(doc_auto_cfg))] — a feature removed on recent nightlies.
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]
# Feature for documentation generation - minimal dependencies
docs = []  # Minimal feature set for documentation generation

[build-dependencies]

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
serde_json = "1.0"
# manganis removed - using pure Rust styling

[dev-dependencies]
dioxus = { version = "0.7", features = ["web"] }
console_error_panic_hook = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
