[package]
name = "dioxus-element-plug"
version = "0.3.0"
edition = "2021"
authors = ["Paul Johnson"]
description = "Element UI components for Dioxus applications with pure Rust styling system"
license = "MIT"
repository = "https://gitee.com/pauljoihn21/dioxus-element-plug"
documentation = "https://docs.rs/dioxus-element-plug"
homepage = "https://gitee.com/pauljoihn21/dioxus-element-plug"
keywords = ["dioxus", "ui", "components", "element-ui", "styling"]
categories = ["web-programming", "gui"]
readme = "README.md"

# Files to exclude from the published package
exclude = [
  "examples/*",
  "dist/*",
  ".github/*",
  "*.txt",
  "Makefile",
]

[package.metadata.docs.rs]
# Only pass --cfg docsrs to rustdoc (our crate), NOT to rustc (all dependencies).
# Passing --cfg docsrs to rustc breaks dependencies like generic-array and slotmap
# which use #![cfg_attr(docsrs, feature(doc_auto_cfg))] — a feature removed on recent nightlies.
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["icons"]
server = ["dioxus/server"]
web = ["dioxus/web"]
# Feature for documentation generation - minimal dependencies
docs = []
# Enable Element Plus icons support
icons = ["dep:element-icons"]

[build-dependencies]

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
element-icons = { path = "element-icons", optional = true }
# manganis removed - using pure Rust styling

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
gloo-timers = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
console_error_panic_hook = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
