[package]
name = "dioxus-element-plug-docs"
version = "0.3.0"
edition = "2021"
authors = ["Paul Johnson"]
description = "Documentation site for dioxus-element-plug - built with dioxus-element-plug"
license = "MIT"
repository = "https://gitee.com/pauljoihn21/dioxus-element-plug"

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-element-plug = { path = "..", features = ["web", "icons"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
