[package]
name = "element-icons"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Element Plus icon components for Dioxus 0.7 applications"
license = "MIT"
repository = "https://github.com/pauljohn21/dioxus-element-plug"
homepage = "https://github.com/pauljohn21/dioxus-element-plug"

[dependencies]
dioxus = { version = "0.7.1" }
