[package]
name = "modern-pure-rust-example"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
dioxus-element-plug = { path = "../.." }
gloo-console = "0.4"
console_error_panic_hook = "0.1"

[features]
default = ["web"]
web = ["dioxus/web"]