[package]
name = "with-scss-asset"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
dioxus-element-plug = { path = "../../" }
manganis = { version = "0.7.9", features = ["dioxus"] }

[profile.dev]
debug = 2

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"